--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,7 @@ body, html {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 [hidden] {
@@ -118,6 +119,8 @@ body.dark {
 }
 
 body {
+	position: relative;
+
 	/* Fonts */
 	font-family: var(--system-ui);
 	font-variant-position: normal;
